--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,9 @@ services:
       - static_volume:/app/staticfiles
       - media_volume:/app/media
     networks:
-      - sigmaops-network
+      - sigmaops-net
     healthcheck:
-      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/')"]
+      test: [ "CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/')" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -34,6 +34,10 @@ volumes:
   static_volume:
   media_volume:
 
+
 networks:
-  sigmaops-network:
+  sigmaops-net:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.28.0.0/16
